[package]
name = "tymigrawr-derive"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["database", "migrations", "ecs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
bench = false

[dependencies]
proc-macro2 = "^1.0"
quote = "^1.0"
syn = "^1.0"
