[package]
name = "tymigrawr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["backend_sqlite"]
backend_sqlite = ["sqlite"]

[dependencies]
log = "^0.4"
serde = "^1.0"
serde_json = "^1.0"
snafu = "^0.7"
sqlite = { version = "^0.31", optional = true}
tymigrawr-derive = { version = "0.1.0", path = "../tymigrawr-derive" }

[dev-dependencies]
env_logger = "^0.10"
tempfile = "^3.8"